// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Urls should gets Urls for entry module: outputFileStrategy: members 1`] = `
[
  "@scope/module-1/README.mdx",
  "@scope/module-1/classes/ModuleClass.mdx",
  "README.mdx",
  "entry-module/classes/ModuleClass.mdx",
  "module-2/README.mdx",
  "module-2/classes/ModuleClass.mdx",
  "readme_.mdx",
]
`;

exports[`Urls should gets Urls for entry module: outputFileStrategy: members 2`] = `
[
  "entry-module/classes/ModuleClass.mdx",
  "index.mdx",
  "module-1/classes/ModuleClass.mdx",
  "module-1/index.mdx",
  "module-2/classes/ModuleClass.mdx",
  "module-2/index.mdx",
]
`;

exports[`Urls should gets Urls for entry module: outputFileStrategy: modules 1`] = `
[
  "@scope/module-1.mdx",
  "README.mdx",
  "module-2.mdx",
  "readme_.mdx",
]
`;

exports[`Urls should gets Urls for entry module: outputFileStrategy: modules 2`] = `
[
  "index.mdx",
  "module-1.mdx",
  "module-2.mdx",
]
`;

exports[`Urls should gets Urls for modules parts: outputFileStrategy: members 1`] = `
[
  "README.md",
  "module-1/submodules/submodule-1/README.md",
  "module-1/submodules/submodule-1/classes/ClassA.md",
  "module-1/submodules/submodule-1/classes/ClassB.md",
  "module-1/submodules/submodule-1/enumerations/EnumA.md",
  "module-1/submodules/submodule-1/enumerations/EnumB.md",
  "module-1/submodules/submodule-1/interfaces/InterfaceA.md",
  "module-1/submodules/submodule-1/interfaces/InterfaceB.md",
  "module-1/submodules/submodule-1/type-aliases/TypeA.md",
  "module-1/submodules/submodule-1/type-aliases/TypeB.md",
  "module-1/submodules/submodule-2/README.md",
  "module-1/submodules/submodule-2/classes/ClassA.md",
  "module-1/submodules/submodule-2/classes/ClassB.md",
  "module-1/submodules/submodule-2/enumerations/EnumA.md",
  "module-1/submodules/submodule-2/enumerations/EnumB.md",
  "module-1/submodules/submodule-2/interfaces/InterfaceA.md",
  "module-1/submodules/submodule-2/interfaces/InterfaceB.md",
  "module-1/submodules/submodule-2/type-aliases/TypeA.md",
  "module-1/submodules/submodule-2/type-aliases/TypeB.md",
  "module-2/namespace-2/README.md",
  "module-2/namespace-2/classes/ClassA.md",
  "module-2/namespace-2/classes/ClassB.md",
  "module-2/namespace-2/enumerations/EnumA.md",
  "module-2/namespace-2/enumerations/EnumB.md",
  "module-2/namespace-2/interfaces/InterfaceA.md",
  "module-2/namespace-2/interfaces/InterfaceB.md",
  "module-2/namespace-2/type-aliases/TypeA.md",
  "module-2/namespace-2/type-aliases/TypeB.md",
  "namespace/README.md",
  "namespace/classes/ClassA.md",
  "namespace/classes/ClassB.md",
  "namespace/enumerations/EnumA.md",
  "namespace/enumerations/EnumB.md",
  "namespace/interfaces/InterfaceA.md",
  "namespace/interfaces/InterfaceB.md",
  "namespace/type-aliases/TypeA.md",
  "namespace/type-aliases/TypeB.md",
]
`;

exports[`Urls should gets Urls for modules parts: outputFileStrategy: modules 1`] = `
[
  "README.md",
  "module-1/submodules/submodule-1.md",
  "module-1/submodules/submodule-2.md",
  "module-2/namespace-2.md",
  "namespace.md",
]
`;

exports[`Urls should gets Urls for multiple entry points: outputFileStrategy: members 1`] = `
[
  "-internal-/index.md",
  "42-module-name/index.md",
  "basic/classes/ClassA.md",
  "basic/classes/ClassB.md",
  "basic/enumerations/EnumA.md",
  "basic/enumerations/EnumB.md",
  "basic/index.md",
  "basic/interfaces/InterfaceA.md",
  "basic/interfaces/InterfaceB.md",
  "basic/type-aliases/TypeA.md",
  "basic/type-aliases/TypeB.md",
  "has-categories/enumerations/CategoryAEnum1.md",
  "has-categories/enumerations/CategoryAEnum2.md",
  "has-categories/enumerations/CategoryBEnum1.md",
  "has-categories/enumerations/CategoryBEnum2.md",
  "has-categories/enumerations/UnCategorizedEnum.md",
  "has-categories/index.md",
  "has-categories/interfaces/CategoryAInterface1.md",
  "has-categories/interfaces/CategoryAInterface2.md",
  "has-categories/interfaces/CategoryBInterface1.md",
  "has-categories/interfaces/CategoryBInterface2.md",
  "has-categories/interfaces/UnCategorizedInterace.md",
  "has-custom-groups/index.md",
  "has-custom-groups/variables/variabelA.md",
  "has-custom-groups/variables/variableB1.md",
  "has-custom-groups/variables/variableB2.md",
  "has-custom-groups/variables/variableC.md",
  "has-namespaces/classes/ClassB.md",
  "has-namespaces/classes/Class_A_.md",
  "has-namespaces/enumerations/EnumB.md",
  "has-namespaces/enumerations/Enum_A_.md",
  "has-namespaces/functions/functionB.md",
  "has-namespaces/functions/function_A_.md",
  "has-namespaces/index.md",
  "has-namespaces/interfaces/InterfaceB.md",
  "has-namespaces/interfaces/Interface_A_.md",
  "has-namespaces/namespaces/NamespaceB/index.md",
  "has-namespaces/namespaces/Namespace_A_/index.md",
  "has-namespaces/namespaces/Namespace_A_/interfaces/NamespaceInterface.md",
  "has-namespaces/namespaces/Namespace_A_/namespaces/NestedNamespace/index.md",
  "has-namespaces/namespaces/Namespace_A_/namespaces/NestedNamespace/interfaces/NamespaceInterface.md",
  "has-namespaces/type-aliases/TypeB.md",
  "has-namespaces/type-aliases/Type_A_.md",
  "has-namespaces/variables/variableB.md",
  "has-namespaces/variables/variable_A_.md",
  "has-references/functions/defaultFunction.md",
  "has-references/index.md",
  "has-same-exports/classes/SomeClass.md",
  "has-same-exports/classes/someClass-1.md",
  "has-same-exports/index.md",
  "index/classes/SomeClass.md",
  "index/index.md",
  "index.md",
  "modules.md",
]
`;

exports[`Urls should gets Urls for multiple entry points: outputFileStrategy: members 2`] = `
[
  "-internal-/index.md",
  "42-module-name/index.md",
  "basic/classes/ClassA.md",
  "basic/classes/ClassB.md",
  "basic/enumerations/EnumA.md",
  "basic/enumerations/EnumB.md",
  "basic/index.md",
  "basic/interfaces/InterfaceA.md",
  "basic/interfaces/InterfaceB.md",
  "has-categories/enumerations/CategoryAEnum1.md",
  "has-categories/enumerations/CategoryAEnum2.md",
  "has-categories/enumerations/CategoryBEnum1.md",
  "has-categories/enumerations/CategoryBEnum2.md",
  "has-categories/enumerations/UnCategorizedEnum.md",
  "has-categories/index.md",
  "has-categories/interfaces/CategoryAInterface1.md",
  "has-categories/interfaces/CategoryAInterface2.md",
  "has-categories/interfaces/CategoryBInterface1.md",
  "has-categories/interfaces/CategoryBInterface2.md",
  "has-categories/interfaces/UnCategorizedInterace.md",
  "has-custom-groups/index.md",
  "has-namespaces/classes/ClassB.md",
  "has-namespaces/classes/Class_A_.md",
  "has-namespaces/enumerations/EnumB.md",
  "has-namespaces/enumerations/Enum_A_.md",
  "has-namespaces/index.md",
  "has-namespaces/interfaces/InterfaceB.md",
  "has-namespaces/interfaces/Interface_A_.md",
  "has-namespaces/namespaces/NamespaceB/index.md",
  "has-namespaces/namespaces/Namespace_A_/index.md",
  "has-namespaces/namespaces/Namespace_A_/interfaces/NamespaceInterface.md",
  "has-namespaces/namespaces/Namespace_A_/namespaces/NestedNamespace/index.md",
  "has-namespaces/namespaces/Namespace_A_/namespaces/NestedNamespace/interfaces/NamespaceInterface.md",
  "has-references/index.md",
  "has-same-exports/classes/SomeClass.md",
  "has-same-exports/classes/someClass-1.md",
  "has-same-exports/index.md",
  "index/classes/SomeClass.md",
  "index/index.md",
  "index.md",
]
`;

exports[`Urls should gets Urls for multiple entry points: outputFileStrategy: modules 1`] = `
[
  "-internal-.md",
  "42-module-name.md",
  "basic.md",
  "has-categories.md",
  "has-custom-groups.md",
  "has-namespaces/index.md",
  "has-namespaces/namespaces/NamespaceB.md",
  "has-namespaces/namespaces/Namespace_A_/index.md",
  "has-namespaces/namespaces/Namespace_A_/namespaces/NestedNamespace.md",
  "has-references.md",
  "has-same-exports.md",
  "index.md",
  "module_index.md",
  "modules.md",
]
`;

exports[`Urls should gets Urls for multiple entry points: outputFileStrategy: modules 2`] = `
[
  "-internal-.md",
  "42-module-name.md",
  "basic.md",
  "has-categories.md",
  "has-custom-groups.md",
  "has-namespaces/index.md",
  "has-namespaces/namespaces/NamespaceB.md",
  "has-namespaces/namespaces/Namespace_A_/index.md",
  "has-namespaces/namespaces/Namespace_A_/namespaces/NestedNamespace.md",
  "has-references.md",
  "has-same-exports.md",
  "index.md",
  "module_index.md",
]
`;

exports[`Urls should gets Urls for packages entry points: outputFileStrategy: members 1`] = `
[
  "@scope/package-1/globals.md",
  "@scope/package-1/index.md",
  "@scope/package-1/interfaces/PackageInterface.md",
  "@scope/package-3/index/index.md",
  "@scope/package-3/index/interfaces/PackageInterfaceForIndexModule.md",
  "@scope/package-3/index.md",
  "@scope/package-3/module-1/index.md",
  "@scope/package-3/module-1/interfaces/PackageInterface1.md",
  "@scope/package-3/module-2/index.md",
  "@scope/package-3/module-2/interfaces/PackageInterface2.md",
  "index.md",
  "package-1b/index.md",
  "package-1b/interfaces/PackageInterface.md",
  "package-2/index.md",
  "package-2/module-1/index.md",
  "package-2/module-1/interfaces/PackageInterface1.md",
  "package-2/module-2/index.md",
  "package-2/module-2/interfaces/PackageInterface2.md",
  "package-2/modules.md",
  "package-4/index.md",
  "package-4/interfaces/PackageInterface.md",
  "package-5/module1/interfaces/PackageInterface1.md",
  "package-5/module2/index.md",
  "package-5/module2/interfaces/PackageInterface2.md",
  "package-5/package-5.md",
  "package-6/module1/interfaces/PackageInterface1.md",
  "package-6/module2/index.md",
  "package-6/module2/interfaces/PackageInterface2.md",
  "package-6.md",
  "packages.md",
]
`;

exports[`Urls should gets Urls for packages entry points: outputFileStrategy: members 2`] = `
[
  "index.md",
  "package-1/index.md",
  "package-1/interfaces/PackageInterface.md",
  "package-1b/index.md",
  "package-1b/interfaces/PackageInterface.md",
  "package-2/index.md",
  "package-2/module-1/index.md",
  "package-2/module-1/interfaces/PackageInterface1.md",
  "package-2/module-2/index.md",
  "package-2/module-2/interfaces/PackageInterface2.md",
  "package-3/index/index.md",
  "package-3/index/interfaces/PackageInterfaceForIndexModule.md",
  "package-3/index.md",
  "package-3/module-1/index.md",
  "package-3/module-1/interfaces/PackageInterface1.md",
  "package-3/module-2/index.md",
  "package-3/module-2/interfaces/PackageInterface2.md",
  "package-4/index.md",
  "package-4/interfaces/PackageInterface.md",
  "package-5/module1/interfaces/PackageInterface1.md",
  "package-5/module2/index.md",
  "package-5/module2/interfaces/PackageInterface2.md",
  "package-5/package-5.md",
  "package-6/module1/interfaces/PackageInterface1.md",
  "package-6/module2/index.md",
  "package-6/module2/interfaces/PackageInterface2.md",
  "package-6.md",
]
`;

exports[`Urls should gets Urls for packages entry points: outputFileStrategy: modules 1`] = `
[
  "@scope/package-1/globals.md",
  "@scope/package-1/index.md",
  "@scope/package-3/index.md",
  "@scope/package-3/interfaces/PackageInterface1.md",
  "@scope/package-3/interfaces/PackageInterface2.md",
  "@scope/package-3/interfaces/PackageInterfaceForIndexModule.md",
  "@scope/package-3/module-1.md",
  "@scope/package-3/module-2.md",
  "@scope/package-3/module_index.md",
  "index.md",
  "package-1b/index.md",
  "package-2/index.md",
  "package-2/module-1.md",
  "package-2/module-2.md",
  "package-2/modules.md",
  "package-4/index.md",
  "package-4/interfaces/PackageInterface.md",
  "package-5/module2.md",
  "package-5/package-5.md",
  "package-6/module2.md",
  "package-6.md",
  "packages.md",
]
`;

exports[`Urls should gets Urls for packages entry points: outputFileStrategy: modules 2`] = `
[
  "index.md",
  "package-1/index.md",
  "package-1b/index.md",
  "package-2/index.md",
  "package-2/module-1.md",
  "package-2/module-2.md",
  "package-3/index.md",
  "package-3/interfaces/PackageInterface1.md",
  "package-3/interfaces/PackageInterface2.md",
  "package-3/interfaces/PackageInterfaceForIndexModule.md",
  "package-3/module-1.md",
  "package-3/module-2.md",
  "package-3/module_index.md",
  "package-4/index.md",
  "package-4/interfaces/PackageInterface.md",
  "package-5/module2.md",
  "package-5/package-5.md",
  "package-6/module2.md",
  "package-6.md",
]
`;

exports[`Urls should gets Urls for readme options: outputFileStrategy: members 1`] = `
[
  "functions/someFunction.md",
  "index.md",
]
`;

exports[`Urls should gets Urls for readme options: outputFileStrategy: modules 1`] = `
[
  "index.md",
]
`;

exports[`Urls should gets Urls for single entry points: outputFileStrategy: members 1`] = `
[
  "README.md",
  "classes/AbstractClass.md",
  "classes/BasicClass.md",
  "classes/CallbacksOptions.md",
  "classes/ClassWithAccessors.md",
  "classes/ClassWithConstructorOverloads.md",
  "classes/ClassWithFlags.md",
  "classes/ClassWithModifiers.md",
  "classes/ClassWithTypeParameters.md",
  "classes/DerivedClassA.md",
  "classes/DerivedClassB.md",
  "classes/DisposableClass.md",
  "enumerations/BasicEnum.md",
  "enumerations/EnumWithValues.md",
  "functions/basicFunction.md",
  "functions/functionReturningAFunction.md",
  "functions/functionReturningAPromise.md",
  "functions/functionReturningAString.md",
  "functions/functionReturningAUnionType.md",
  "functions/functionReturningAnObject.md",
  "functions/functionWithComplexParams.md",
  "functions/functionWithDefaultParameters.md",
  "functions/functionWithMultipleSignatures.md",
  "functions/functionWithNamedParams.md",
  "functions/functionWithNestedParameters.md",
  "functions/functionWithOptionalParameters.md",
  "functions/functionWithRestParams.md",
  "functions/functionWithTypeParameters.md",
  "globals.md",
  "interfaces/BasicInterface.md",
  "interfaces/CustomEventInterface.md",
  "interfaces/ExtendedInterface.md",
  "interfaces/IndexableInterface.md",
  "interfaces/InterfaceWithEventProperties.md",
  "interfaces/InterfaceWithFlags.md",
  "interfaces/InterfaceWithTypeParameters.md",
  "type-aliases/ArrayOfStuff.md",
  "type-aliases/ArrayType.md",
  "type-aliases/ConditionalType.md",
  "type-aliases/ExternalReferenceType.md",
  "type-aliases/FunctionType.md",
  "type-aliases/IndexAccessType.md",
  "type-aliases/IntersectionType.md",
  "type-aliases/LiteralType.md",
  "type-aliases/PartialMappedType.md",
  "type-aliases/PrimitiveType.md",
  "type-aliases/PromiseTypeWithObject.md",
  "type-aliases/PromiseTypeWithSymbol.md",
  "type-aliases/QueryType.md",
  "type-aliases/ReadonlyMappedType.md",
  "type-aliases/StringLiteralType.md",
  "type-aliases/TupleType.md",
  "type-aliases/TypeWithExternalSymbolLinkMapping.md",
  "type-aliases/TypeWithTypeParams.md",
  "type-aliases/UnionType.md",
  "variables/objectLiteralVariable.md",
  "variables/objectWithSymbol.md",
  "variables/someQuery.md",
  "variables/stringVariable.md",
  "variables/typeOperatorVariable.md",
]
`;

exports[`Urls should gets Urls for single entry points: outputFileStrategy: members 2`] = `
[
  "README.md",
  "classes/AbstractClass.md",
  "classes/BasicClass.md",
  "classes/CallbacksOptions.md",
  "classes/ClassWithAccessors.md",
  "classes/ClassWithConstructorOverloads.md",
  "classes/ClassWithFlags.md",
  "classes/ClassWithModifiers.md",
  "classes/ClassWithTypeParameters.md",
  "classes/DerivedClassA.md",
  "classes/DerivedClassB.md",
  "classes/DisposableClass.md",
  "enumerations/BasicEnum.md",
  "enumerations/EnumWithValues.md",
  "functions/basicFunction.md",
  "functions/functionReturningAFunction.md",
  "functions/functionReturningAPromise.md",
  "functions/functionReturningAString.md",
  "functions/functionReturningAUnionType.md",
  "functions/functionReturningAnObject.md",
  "functions/functionWithComplexParams.md",
  "functions/functionWithDefaultParameters.md",
  "functions/functionWithMultipleSignatures.md",
  "functions/functionWithNamedParams.md",
  "functions/functionWithNestedParameters.md",
  "functions/functionWithOptionalParameters.md",
  "functions/functionWithRestParams.md",
  "functions/functionWithTypeParameters.md",
  "interfaces/BasicInterface.md",
  "interfaces/CustomEventInterface.md",
  "interfaces/ExtendedInterface.md",
  "interfaces/IndexableInterface.md",
  "interfaces/InterfaceWithEventProperties.md",
  "interfaces/InterfaceWithFlags.md",
  "interfaces/InterfaceWithTypeParameters.md",
  "type-aliases/ArrayOfStuff.md",
  "type-aliases/ArrayType.md",
  "type-aliases/ConditionalType.md",
  "type-aliases/ExternalReferenceType.md",
  "type-aliases/FunctionType.md",
  "type-aliases/IndexAccessType.md",
  "type-aliases/IntersectionType.md",
  "type-aliases/LiteralType.md",
  "type-aliases/PartialMappedType.md",
  "type-aliases/PrimitiveType.md",
  "type-aliases/PromiseTypeWithObject.md",
  "type-aliases/PromiseTypeWithSymbol.md",
  "type-aliases/QueryType.md",
  "type-aliases/ReadonlyMappedType.md",
  "type-aliases/StringLiteralType.md",
  "type-aliases/TupleType.md",
  "type-aliases/TypeWithExternalSymbolLinkMapping.md",
  "type-aliases/TypeWithTypeParams.md",
  "type-aliases/UnionType.md",
  "variables/objectLiteralVariable.md",
  "variables/objectWithSymbol.md",
  "variables/someQuery.md",
  "variables/stringVariable.md",
  "variables/typeOperatorVariable.md",
]
`;

exports[`Urls should gets Urls for single entry points: outputFileStrategy: modules 1`] = `
[
  "README.md",
  "globals.md",
]
`;

exports[`Urls should gets Urls for single entry points: outputFileStrategy: modules 2`] = `
[
  "README.md",
]
`;

exports[`Urls should gets Urls for single package entry points: outputFileStrategy: members 1`] = `
[
  "README.md",
  "interfaces/PackageInterface.md",
  "packages.md",
]
`;

exports[`Urls should gets Urls for single package entry points: outputFileStrategy: modules 1`] = `
[
  "README.md",
  "packages.md",
]
`;
